prefer even indent sizes

only guess non-even ones if there are no even matches
BUG: 474505