autotests/src/indentdetect_test.cpp
@@ -30,6 +30,7 @@ void IndentDetectTest::test_data()
     QTest::addRow("this_file") << QString(dir + QStringLiteral("indentdetect_test.cpp")) << false << 4;
     QTest::addRow("xml_1_space") << QString(dir + QStringLiteral("a.xml")) << false << 1;
     QTest::addRow("main_bad_1_space") << QString(dir + QStringLiteral("main_bad_1_space.cpp")) << false << 4;
+    QTest::addRow("bogus7spaces") << QString(dir + QStringLiteral("bogus7spaces.md")) << false << 4;
 }
 
 void IndentDetectTest::test()
